[package]
name = "widget"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "8.0.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
winit = "0.30"
raw-window-handle = "0.6"
winsafe = { version = "0.0.26", features = ["gdi", "user"] }

# [lints.rust]
# unused_imports = "allow"
# dead_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
